# agentvinod

./: README.md  pyproject.toml  report.md
src/agentvinod/: crew.py  main.py
