[project]
name = "agentvinod"
version = "0.1.0"
description = "agentVinod using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
agentvinod = "agentvinod.main:run"
run_crew = "agentvinod.main:run"
train = "agentvinod.main:train"
replay = "agentvinod.main:replay"
test = "agentvinod.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
